--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -1,32 +1,24 @@
-name: Check Build Errors
-
+---
+name: Check Next.js Build
 on:
   push:
     branches:
-      -main
-      -development
-  pull_request:
-
+      - main
+  pull_request: null
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-        node-version: 20
-        cache: 'pnpm'
-
+          node-version: 20
+          cache: pnpm
       - name: Install pnpm
         run: npm install -g pnpm
-
       - name: Install dependencies
         run: pnpm install
-
-      - name: Build project
-        run: pnpm build
-
+      - name: Build Next.js app
+        run: pnpm run build
