--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -1,24 +1,38 @@
----
 name: Check Next.js Build
+
 on:
   push:
     branches:
       - main
-  pull_request: null
+      - development
+  pull_request:
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
+      # 1. Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v4
+
+      # 2. Setup pnpm directly using official action
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9 # specify your pnpm version if needed
+
+      # 3. Setup Node.js and enable caching for pnpm
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: pnpm
-      - name: Install pnpm
-        run: npm install -g pnpm
+
+      # 4. Install dependencies
       - name: Install dependencies
         run: pnpm install
+
+      # 5. Build the Next.js app
       - name: Build Next.js app
         run: pnpm run build
