--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           node-version: 20
           cache: pnpm
+          cache-dependency-path: frontend/pnpm-lock.yaml
 
       # 4. Install dependencies
       - name: Install dependencies
